cluster/homelab/apps/homepage/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
spec:
  ingressClassName: internal-nginx
  tls:
    - hosts:
        - "*.k8s.hyde.services"
      secretName: wildcard.hyde.services
  rules:
    - host: homepage.k8s.hyde.services
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: homepage
                port:
                  number: 3000
